...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvNamePromocion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/tvGasolinerasAsociadas"
        app:layout_constraintTop_toTopOf="@+id/ivLogoPromocion" />

    <TextView
        android:id="@+id/tvNameGasolinera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:ems="5"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/tvGasolinerasAsociadas"
        app:layout_constraintTop_toBottomOf="@+id/tvGasolinerasAsociadas" />

    <TextView
        android:id="@+id/tvDescuento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/tvCombustiblesAsociados"
        app:layout_constraintTop_toTopOf="@+id/tvNamePromocion" />

    <TextView
        android:id="@+id/tvCombustible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/tvCombustiblesAsociados"
        app:layout_constraintTop_toTopOf="@+id/tvNameGasolinera" />
...
