...

        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloNuevaProm" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:hint="@string/indicacionNombre"
...
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/etNombre"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <es.unican.is.appgasolineras.common.utils.MultipleSpinner
        android:id="@+id/spMultipleCombustibles"
        class="es.unican.is.appgasolineras.common.utils.MultipleSpinner"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F44336"
        app:layout_constraintStart_toStartOf="@+id/tvCombustiblesLbl"
...
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#FA4848"
        android:text="@string/cancel"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/etDescuento"
        app:layout_constraintTop_toTopOf="@+id/btnAnhadir" />


    <Button
        android:id="@+id/btnAnhadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#279F2A"
        android:text="@string/anhadir"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTipoDescuento" />

    <EditText
        android:id="@+id/etDescuento"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
...
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/spMultipleCombustibles"
        app:layout_constraintTop_toBottomOf="@+id/spMultipleCombustibles" />

    <Spinner
        android:id="@+id/spCriterioGasolineras"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F44336"

        app:layout_constraintStart_toStartOf="@+id/tvGasolinerasLbl"
...
